--- a/css/style.css
+++ b/css/style.css
@@ -45,15 +45,16 @@ li {
 
 button {
   padding: 1rem 3rem;
-  border: 2rem;
+
   border: none;
+  border-radius: 2rem;
   outline: none;
   line-height: 3.6rem;
   text-transform: capitalize;
   cursor: pointer;
   font-style: normal;
   font-weight: normal;
-  font-style: 2rem;
+  font-size: 2rem;
 }
 
 /* ----------Header Section---------- */
@@ -89,4 +90,49 @@ header nav .menu a li {
 
 header nav .menu a li:hover {
   color: #4b709e;
+}
+
+/* ----------Hero Section---------- */
+
+.hero-section {
+  padding: 0 20rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5rem;
+}
+/* Hero Left side */
+.hero-section .hero-content {
+  width: 50%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.hero-section .hero-content h1 {
+  width: 40rem;
+  font-size: 5rem;
+  line-height: 5rem;
+  margin-bottom: 4rem;
+  text-transform: capitalize;
+}
+
+.hero-section .hero-content p {
+  width: 45rem;
+  margin-bottom: 3rem;
+}
+
+.hero-section .hero-img {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-section .hero-img img {
+  width: 100%;
 }
