--- a/css/style.css
+++ b/css/style.css
@@ -193,3 +193,14 @@ header nav .menu a li:hover {
   font-size: 1.5rem;
   margin-top: 1rem;
 }
+
+/* -----Footer Section---------- */
+footer {
+  margin-top: 5rem;
+  font-size: 1rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #efefefef;
+}
