responsive done for tab & laptop

--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,97 @@ footer {
   background-color: #efefefef;
 }
 
+/* Responsive for Laptop */
+@media (max-width: 1200px) {
+  header,
+  .hero-section,
+  .products-section {
+    padding: 0 10rem;
+  }
+
+  header nav .logo h1 {
+    font-size: 3rem;
+  }
+
+  .hero-section .hero-content h1 {
+    width: 35rem;
+    font-size: 4rem;
+  }
+
+  .hero-section .hero-content p {
+    width: 35rem;
+  }
+}
+
+/* Responsive for Tab */
+@media (max-width: 900px) {
+  header,
+  .hero-section,
+  .products-section {
+    padding: 0 9rem;
+  }
+
+  .hero-section,
+  .products-section {
+    margin-bottom: 10rem;
+  }
+
+  header nav .logo h1 {
+    font-size: 3rem;
+  }
+
+  header nav .menu a {
+    margin-left: 2rem;
+  }
+  header nav .menu a li {
+    font-size: 2rem;
+  }
+
+  .hero-section {
+    flex-direction: column;
+    height: 80vh;
+  }
+
+  .hero-section .hero-content {
+    order: 2;
+    width: 100%;
+  }
+
+  .hero-section .hero-content h1 {
+    font-size: 4rem;
+    width: 100%;
+    line-height: 6rem;
+    margin-bottom: 2rem;
+  }
+
+  .hero-section .hero-content p {
+    width: 100%;
+    font-size: 2rem;
+    margin-bottom: 5rem;
+  }
+  .hero-section .hero-img {
+    order: 1;
+    width: 100%;
+  }
+  .hero-section .hero-img img {
+    width: 100%;
+  }
+
+  .products-section h1 {
+    font-size: 4rem;
+    margin-bottom: 2rem;
+    line-height: 6rem;
+  }
+
+  .products-section .products {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  footer p {
+    font-size: 1.5rem;
+  }
+}
+
 /* Responsive for mobile devices */
 @media (max-width: 576px) {
   header,
